# MinisProjects

./: .gitignore  .gitmodules  CLAUDE.md  index.json  modules.json  package.json  skills-lock.json
.claude/: settings.json
docs/: README.md  audio.md  test.txt
docs/Esp32S3Pico/: index.md
docs/Esp32S3Zero/: index.md
libs/MinisC/: keywords.txt  library.properties
libs/MinisC/compiler/: package.json
libs/MinisC/compiler/src/: ast.ts  codegen.ts  index.ts  lexer.ts  natives.ts  opcodes.ts  packer.ts  parser.ts
libs/MinisC/examples/BasicScript/: BasicScript.ino
libs/MinisC/src/: MinisC.h  MinisNatives.h  MinisOpcodes.h  MinisVM.cpp  MinisVM.h  MinisValue.h
libs/MinisIoT/: keywords.txt  library.properties
libs/MinisIoT/examples/BasicSensor/: BasicSensor.ino
libs/MinisIoT/examples/SensorWithCommands/: SensorWithCommands.ino
libs/MinisIoT/src/: MinisIoT.cpp  MinisIoT.h
libs/Qt/: library.properties
libs/Qt/src/: MinisQt.h
libs/uMinisLib/: hardware.py  minis_display.py  minis_entities.py  minis_iot.py  minis_mqtt_vfs.py  minis_vfs.py  vfs.py  vkbd.py  vmouse.py
libs/uMinisLib/docs/: uMinisLib.md
libs/uMinisLib/examples/basic_sensor/: basic_sensor.py
libs/uMinisLib/examples/entities_demo/: entities_demo.py
libs/uMinisLib/examples/sensor_with_commands/: sensor_with_commands.py
scripts/: generate-index.js
src/CYDEspDash/: README.md  project.json
src/CYDEspDash/docs/: welcome.md
src/CYDEspDash/src/CYDEspDash/: CYDEspDash.ino
src/CYDTest/: README.md  project.js  project.json
src/CYDTest/sketches/CYDTest/: CYDTest.py  color_setup.py
src/Esp32AudioPlayer/: project.json
src/Esp32AudioPlayer/docs/: ESP32AudioPlayer.md  welcome.md
src/Esp32C3Lamp/: README.md  project.js  project.json
src/Esp32C3Lamp/sketches/Breathing/: Breathing.blockly  Breathing.py
src/Esp32C3Lamp/sketches/Chase/: Chase.blockly  Chase.py
src/Esp32C3Lamp/sketches/Comet/: Comet.blockly  Comet.py
src/Esp32C3Lamp/sketches/Fire/: Fire.blockly  Fire.py
src/Esp32C3Lamp/sketches/SolidRed/: SolidRed.blockly  SolidRed.py
src/Esp32C3Lamp/sketches/Twinkle/: Twinkle.blockly  Twinkle.py
src/Esp32C3Lamp/sketches/Wipe/: Wipe.blockly  Wipe.py
src/Esp32DashPro/: README.md  project.json
src/Esp32DashPro/docs/: welcome.md
src/Esp32DashPro/src/CYDDashboard/: CYDDashboard.ino
src/Esp32S3DisplayVGA/: project.json
src/Esp32S3DisplayVGA/docs/: Esp32S3DisplayVGA.md  welcome.md
src/Esp32S3DisplayVGA/src/luniVGA/: DMAVideoBuffer.h  luniVGA.h  (+1 more)
src/Esp32S3DisplayVGA1bit/: project.json
src/Esp32S3DisplayVGA1bit/docs/: Esp32S3DisplayVGA1bit.md  welcome.md
src/Esp32S3Test/: project.json
src/Esp32S3Test/docs/: welcome.md
src/Esp32S3Zero/uPythonTest/: project.json
src/Esp32S3ZeroAudio/: README.md  project.js  project.json
src/Esp32S3ZeroAudio/docs/: welcome.md
src/Esp32S3ZeroGfxDemo/: README.md  project.json
src/Esp32S3ZeroGfxDemo/docs/: welcome.md
src/Esp32S3ZeroQtDemo/: README.md  project.json
src/Esp32S3ZeroQtDemo/docs/: welcome.md
src/Esp32S3ZeroTest/: project.json
src/Esp32S3ZeroTest/docs/: welcome.md
src/Esp32S3uPythonCurses/: README.md  project.js  project.json
src/Esp32S3uPythonCurses/docs/: welcome.md
src/Esp32S3uPythonCurses2/: README.md  project.js  project.json
src/Esp32S3uPythonCurses2/docs/: welcome.md
src/Esp32S3uPythonCurses3/: README.md  project.js  project.json
src/Esp32S3uPythonCurses3/docs/: welcome.md
src/Esp32S3uPythonDisplay/: project.js  project.json
src/Esp32S3uPythonDisplay/docs/: welcome.md
src/Esp32S3uPythonIot/: README.md  project.js  project.json
src/Esp32S3uPythonIot/docs/: welcome.md
src/Esp32S3uPythonTest/: project.js  project.json
src/Esp32S3uPythonTest/docs/: welcome.md
src/Esp32StreamingAudioPlayer/: project.json
src/Esp32StreamingAudioPlayer/docs/: ESP32StreamingAudioPlayer.md  welcome.md
src/Esp32TapeForge/: project.json
src/Esp32TapeForge/docs/: Esp32TapeForge.md  welcome.md
src/Esp32VinylCaster/: project.json
src/Esp32VinylCaster/docs/: Esp32VinylCaster.md  welcome.md
src/PicoSdkBlinkPico/: CMakeLists.txt  project.json
src/PicoSdkBlinkPico/src/: CMakeLists.txt  main.c
src/PicoSdkBlinkPico2/: CMakeLists.txt  project.json
src/PicoSdkBlinkPico2/src/: CMakeLists.txt  main.c
src/PicoSdkBlinkPico2W/: CMakeLists.txt  project.json
src/PicoSdkBlinkPico2W/src/: CMakeLists.txt  main.c
src/PicoSdkBlinkPicoW/: CMakeLists.txt  project.json
src/PicoSdkBlinkPicoW/src/: CMakeLists.txt  main.c
src/RPiPico2DisplayDVI/: CMakeLists.txt  build.sh  project.json
src/RPiPico2DisplayDVI/docs/: RPiPico2DisplayDVI.md  welcome.md
src/RPiPico2DisplayDVI/src/: CMakeLists.txt  main.c
src/RPiPico2DisplayVGA/: CMakeLists.txt  project.json
src/RPiPico2DisplayVGA/docs/: RPiPico2DisplayVGA.md  welcome.md
src/RPiPico2DisplayVGA/src/: CMakeLists.txt  main.c
src/RPiPico2TestPlatform/: CMakeLists.txt  pico_sdk_import.cmake  project.json
src/RPiPico2TestPlatform/docs/: RPiPico2TestPlatform.md  welcome.md
src/RPiPico2TestPlatform/src/: CMakeLists.txt  capture.cpp  capture.hpp  capture.pio  command_handler.cpp  command_handler.hpp  gpio_ctrl.cpp  gpio_ctrl.hpp  hal.hpp  main.cpp  pico_hal.cpp  pico_hal.hpp  protocol.cpp  protocol.hpp  pwm_ctrl.cpp  pwm_ctrl.hpp  sequence.cpp  sequence.hpp
src/RPiPico2TestPlatform/tests/: CMakeLists.txt
src/RPiPico2TestPlatform/tests/host/: conftest.py  requirements.txt  simulator.py  test_capture.py  test_gpio.py  test_pulse.py  test_sequence.py
src/RPiPico2TestPlatform/tests/unit/: CMakeLists.txt  mock_hal.hpp  test_capture.cpp  test_cmd_handler.cpp  test_gpio_ctrl.cpp  test_protocol.cpp  test_pwm_ctrl.cpp  test_sequence.cpp
src/SimpleCassettePlayer/: project.json
src/SimpleCassettePlayer/docs/: SimpleCassettePlayer.md  welcome.md
src/SimpleCassettePlayerRecorder/: project.json
src/SimpleCassettePlayerRecorder/docs/: SimpleCassettePlayerRecorder.md  welcome.md
src/uPythonCheapYellowDisplay/: README.md  project.js  project.json
src/uPythonCheapYellowDisplay/_libs/: ili9341.py  xpt2046.py
src/uPythonCheapYellowDisplay/docs/: welcome.md
(+98 files in other folders)
